trying to fix janky navbar on mobile
half way there. just need to have an icon there to click

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+/*trying to fix it on mobile*/
+@media screen and (max-width: 768px){
+  *{
+    font-size: 0.75rem;
+  }
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -101,6 +106,8 @@ a:link:active, a:visited:active {
   min-height: 225px;
 }
 img {
+  max-width: 100%;
+  max-height: 100%;
   height: 300px;
   width: 300px;
 }
@@ -108,6 +115,44 @@ nav {
   margin-bottom: 5px;
   background-color: #405d27;
   z-index: 1;
+}
+/*show the menu*/
+@media only screen and (max-width: 768px){
+    .navbar{
+      display: none;
+    }
+}
+/*create mobile*/
+.initialMobileMenu {
+  display: none;
+}
+.mobileMenu{
+  display: block;
+  position: absolute;
+  top:0;
+  right: 0;
+  transform: translate(-100%, 60%);
+  font-size: 1.8rem;
+  cursor: pointer;
+  color: #fff;
+}
+aside > ul {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(6,80px);
+  text-align: center
+}
+aside {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background: #0d0d0d;
+  display: grid;
+  align-items: center;
+  top: 0;
+  left: 0;
+  opacity: 1;
 }
 .navbar > a:hover {
   background-color: #ccc;
@@ -185,7 +230,7 @@ footer {
     top: 0;
     width: 100%;
     height: 100%;
-  z-index: 999;
+    z-index: 999;
 }
 .popup-content {
     text-align:center;
